deploy django serv

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
+DJANGO_SETTINGS_MODULE=backend.settings.prod
 DJANGO_ENVIRONMENT=production
 SECRET_KEY=super-secret-here
 ALLOWED_HOSTS=page.com
 CSRF_TRUSTED_ORIGINS=https://page.com
+
 DB_NAME=database
 DB_USER=username
 DB_PASSWORD=password
