--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,41 @@
 services:
   backend:
-    container_name: django
+    container_name: django-backend
     build: .
-    command: uvicorn core.asgi:application --host 0.0.0.0 --port 8000 --reload
-    volumes:
-      - .:/app
+    command: >
+      sh -c "
+        python backend/manage.py migrate &&
+        python backend/manage.py collectstatic --noinput &&
+        gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+      "
+    env_file:
+      - .env
     ports:
       - 8000:8000
+    networks:
+      - internal
+    depends_on:
+      - db
+    restart: unless-stopped
+
+  db:
+    image: postgres:16
+    container_name: postgres-db
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - internal
+    restart: unless-stopped
+
+networks:
+  internal:
+    driver: bridge
+
+volumes:
+  postgres_data:
