deploy correctyle backend

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,10 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/portfolio-backend.nextjs:latest
-            ghcr.io/${{ github.repository_owner }}/portfolio-backend.nextjs:${{ github.sha }}
-          cache-from: type=gha,scope=portfolio-backend
-          cache-to: type=gha,scope=portfolio-backend,mode=max
+            ghcr.io/${{ github.repository_owner }}/portfolio-back.django:latest
+            ghcr.io/${{ github.repository_owner }}/portfolio-back.django:${{ github.sha }}
+          cache-from: type=gha,scope=portfolio-back
+          cache-to: type=gha,scope=portfolio-back,mode=max
         
       - name: Notify infra repo
         env:
