--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build: .
     command: >
       sh -c "
-        python backend/manage.py migrate &&
-        python backend/manage.py collectstatic --noinput &&
+        python manage.py migrate &&
+        python manage.py collectstatic --noinput &&
         gunicorn backend.wsgi:application --bind 0.0.0.0:8000
       "
     env_file:
